--- a/src/components/SubscribersFilterModal/subscribersFilters.css
+++ b/src/components/SubscribersFilterModal/subscribersFilters.css
@@ -1,8 +1,8 @@
-.subscribers-filter-modal .MuiDialog-paperScrollPaper {
-  width: 90%;
-  max-width: 500px;
-  margin: 15px;
-  overflow: unset;
+.subscribers-filters {
+  color: #FFFFFF;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
+  padding: 10px;
+  border-radius: 4px;
 }
 
 .abon-type-radio-group {
