--- a/src/containers/Subscribers/subscribers.css
+++ b/src/containers/Subscribers/subscribers.css
@@ -11,7 +11,7 @@
 
 .subscribers-progress-bar {
   position: absolute !important;
-  bottom: 0;
+  bottom: -4px;
   width: 100% !important;
 }
 
@@ -24,27 +24,65 @@
 
 .search-application,
 .subscribers-table-wrapper form,
-.table-container {
+.table-container,
+.statistics-table-container {
+}
+
+.search-application {
   grid-column: 1 / -1;
+}
+
+.table-container,
+.statistics-table-container {
+  max-height: 700px;
+}
+
+.statistics-table-container {
+  max-height: 535px;
+}
+
+.table-container thead th,
+.statistics-table-container thead th {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
 }
 
 @media (min-width: 720px) {
   .subscribers-table-wrapper {
-    grid-template-columns: minmax(300px, 350px) 1fr;
-    grid-template-rows: auto;
+    grid-template-columns: minmax(350px, 380px) 1fr;
   }
   
   .subscribers-table-wrapper form {
-    grid-column: 1;
+    grid-column: 1 / 2;
   }
   
+  .statistics-table-container {
+    grid-column: 2 / 3;
+  }
+  
+  .search-application,
   .table-container {
-    grid-column: 2;
+    grid-column: 1 / -1;
   }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 719px) {
+  .subscribers-table-wrapper {
+    grid-template-columns: 1fr;
+  }
+  
+  .subscribers-table-wrapper form {
+    order: 1;
+  }
+  
+  .statistics-table-container {
+    order: 2;
+  }
+  
   .search-application {
-    grid-row: 2;
+    order: 3;
+  }
+  
+  .table-container {
+    order: 4;
   }
 }
