--- a/src/containers/Subscribers/subscribers.css
+++ b/src/containers/Subscribers/subscribers.css
@@ -22,27 +22,42 @@
   gap: 20px;
 }
 
-.search-application,
-.subscribers-table-wrapper form,
-.table-container,
-.statistics-table-container {
+.table-container-wrapper,
+.statistics-table-container-wrapper {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
+  border-radius: 5px;
 }
 
 .search-application {
   grid-column: 1 / -1;
 }
 
-.table-container,
-.statistics-table-container {
+.table-container-wrapper,
+.statistics-table-container-wrapper {
   max-height: 700px;
 }
 
 .statistics-table-container {
-  max-height: 657px;
+  height: calc(100% - 40px);
 }
 
-.table-container thead th,
-.statistics-table-container thead th {
+.table-container {
+  height: 100%;
+}
+
+.table-container-title {
+  color: #FFFFFF;
+  font-weight: bold;
+  text-align: center;
+  padding: 8px 10px 0;
+  white-space: nowrap;
+  overflow: scroll;
+  text-overflow: ellipsis;
+  width: 100%;
+}
+
+.table-container-wrapper thead th,
+.statistics-table-container-wrapper thead th {
   background-image: linear-gradient(rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
 }
 
@@ -55,26 +70,27 @@
     grid-column: 1 / 2;
   }
   
-  .statistics-table-container {
+  .statistics-table-container-wrapper {
     grid-column: 2 / 3;
   }
   
   .search-application,
-  .table-container {
+  .table-container-wrapper {
     grid-column: 1 / -1;
   }
 }
 
-@media (max-width: 719px) {
+@media (max-width: 720px) {
   .subscribers-table-wrapper {
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr 400px auto 600px;
   }
   
   .subscribers-table-wrapper form {
     order: 1;
   }
   
-  .statistics-table-container {
+  .statistics-table-container-wrapper {
     order: 2;
   }
   
@@ -82,7 +98,11 @@
     order: 3;
   }
   
-  .table-container {
+  .table-container-wrapper {
     order: 4;
+  }
+  
+  .table-container-wrapper {
+    max-width: calc(100vw - 20px);
   }
 }
